code refatored, sqs service with consumer and producer
